# pomodoro-pet

./: .gitignore  .npmrc  MIGRATION.md  README.md  RELEASING.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build-release.yml  deploy-pages.yml  release.yml  tauri-release.yml
resources/: icon.icns
scripts/: gen-assets.mjs  make-ico.mjs  release-mac.sh  release.sh
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_player.rs  commands.rs  focus_guard.rs  main.rs  model.rs  store.rs  timer.rs  windows.rs
src/main/: focusGuard.ts  index.ts  ipc.ts  music.ts  notifications.ts  store.ts  timer.ts  update.ts  windows.ts
src/preload/: index.d.ts  index.ts
src/renderer/: about.html  blocked.html  index.html  mini.html  strict.html
src/renderer/src/: App.tsx  about.ts  global.d.ts  icons.ts  main.tsx  themes.ts  useChime.ts
src/renderer/src/audio/: audioBus.ts  musicControls.ts  useAudio.ts
src/renderer/src/components/: AboutSection.tsx  Blocker.tsx  Controls.tsx  Device.tsx  LcdScreen.tsx  MiniDevice.tsx  MusicFolder.tsx  Pet.tsx  Pill.tsx  PixelDigits.tsx  SettingsPanel.tsx  SpeakerBar.tsx  StatsPanel.tsx  StrictBreak.tsx  TasksPanel.tsx  UpdateBanner.tsx
src/renderer/src/pets/: petData.ts
src/renderer/src/platform/: tauri.ts  (+1 more)
src/shared/: types.ts
website/: README.md  app.js  index.html  robots.txt  sitemap.xml  styles.css
website/assets/: pet.js
(+7 files in other folders)
