[package]
name = "petomato"
version = "2.0.3"
description = "A retro-LCD Pomodoro timer with a pixel pet that grows as you focus."
authors = ["Rene Uwumuhire"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
chrono = "0.4"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Smaller release binaries (part of the 10–15 MB target).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
